# Sentence-Generator-for-Charades

./: CMakeLists.txt  README.md  database.sqlite  main.cpp
include/: CFG.h  FileReader.h  HelperFunctions.h  RatingDao.h  Server.h  WordDao.h
src/: CFG.cpp  FileReader.cpp  RatingDao.cpp  Server.cpp  WordDao.cpp
words/: Adjectives.txt  Adverbs.txt  Nouns.txt  Prepositions.txt  Verbs.txt
